--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,6 @@
 
 <html>
     <head>
-        <meta http-equiv="Refresh" content="0; URL=books.jsf">
+        <meta http-equiv="Refresh" content="0; URL=index.jsf">
     </head>
 </html>
